Fix input overflow in narrow field layouts

--- a/src/assets/src/styles/main.scss
+++ b/src/assets/src/styles/main.scss
@@ -25,7 +25,8 @@ $prefix: "rynpsc-phonenumber";
 }
 
 .#{$prefix}-number {
-    max-width: 100%;
+    width: 100%;
+    max-width: 25ch;
 }
 
 .#{$prefix}.has-errors .#{$prefix}-button,
@@ -41,6 +42,7 @@ $prefix: "rynpsc-phonenumber";
 	align-items: center;
 	appearance: none;
 	width: 60px;
+    flex-shrink: 0;
 	padding: 6px 9px;
 
 	&:hover:not(:disabled),
